vlib/v/checker/tests/template_type_mismatch_err.vv
fn main() {
	println(return_item())
}

fn return_item() int {
	return $tmpl('./templates/index.html')
}
